--- a/index.html
+++ b/index.html
@@ -137,16 +137,29 @@
             <i class="bi bi-zoom-in full-screen-1"></i>
           </div>
         </div>
+        <div class="environment-text1">
+          <h2>吧台區</h2>
+          <p>將最新鮮的食材，以最美味的方式現場烹飪</p>
+        </div>
 
         <div class="small-img1">
           <div class="filter2">
             <i class="bi bi-zoom-in full-screen-2"></i>
           </div>
         </div>
+        <div class="environment-text2">
+          <h2>一樓用餐區</h2>
+          <p>可以與您的毛孩一起開心用餐的安心場所</p>
+        </div>
+
         <div class="small-img2">
           <div class="filter3">
             <i class="bi bi-zoom-in full-screen-3"></i>
           </div>
+        </div>
+        <div class="environment-text2">
+          <h2>二樓用餐區</h2>
+          <p>關愛浪浪的您，也能在這裡陪貓狗一起用餐</p>
         </div>
       </div>
       <img class="cat-shadow" src="./images/店家環境/Shadow-Cat-01.png" alt="">
@@ -786,19 +799,19 @@
       </div>
       <div class="row">
         <div class="column">
-          <h2 class="weekdays-title">週一</h2>
+          <h2>週一</h2>
           <div class="line-break"></div>
           <h2>休息</h2>
         </div>
 
         <div class="column">
-          <h2 class="weekdays-title">週二</h2>
+          <h2>週二</h2>
           <div class="line-break"></div>
           <h2>休息</h2>
         </div>
 
         <div class="column">
-          <h2 class="weekdays-title">週三</h2>
+          <h2>週三</h2>
           <div class="line-break"></div>
           <h2>12:00 ~ 15:00</h2>
           <div class="line-break"></div>
@@ -806,28 +819,28 @@
         </div>
 
         <div class="column">
-          <h2 class="weekdays-title">週四</h2>
+          <h2>週四</h2>
           <div class="line-break"></div>
           <h2>12:00 ~ 15:00</h2>
           <div class="line-break"></div>
           <h2>17:00 ~ 21:00</h2>
         </div>
         <div class="column">
-          <h2 class="weekdays-title">週五</h2>
+          <h2>週五</h2>
           <div class="line-break"></div>
           <h2>12:00 ~ 15:00</h2>
           <div class="line-break"></div>
           <h2>17:00 ~ 21:00</h2>
         </div>
         <div class="column">
-          <h2 class="weekdays-title">週六</h2>
+          <h2>週六</h2>
           <div class="line-break"></div>
           <h2>12:00 ~ 15:00</h2>
           <div class="line-break"></div>
           <h2>17:00 ~ 21:00</h2>
         </div>
         <div class="column">
-          <h2 class="weekdays-title">週日</h2>
+          <h2>週日</h2>
           <div class="line-break"></div>
           <h2>12:00 ~ 15:00</h2>
           <div class="line-break"></div>
