bing-ken-rwd-swi

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
           <div class="swiper-slide slide3"><img src="./images/下一站家/下一站家-03.jpg">
             <div class="img-words words-3">
               <h2>天生2.5隻腳，樂天小豹</h2>
-              <p>米克斯汪汪「小豹」只有2.5隻腳，牠一出生就時左前肢殘缺，右前肢萎縮變型。在照顧上也需要更多耐心跟愛心，被店主從新屋收容所帶回HomeCafe照顧。
+              <p>米克斯汪汪「小豹」只有2.5隻腳，牠一出生就時左前肢殘缺，右前肢萎縮變型。被店主從新屋收容所帶回HomeCafe照顧。
                 但小豹幸運地碰到了愛牠的飼主Rita，讓牠在愛中成長，更學會一套專屬自己的行動方式，和一般狗狗同樣地敏捷、愛玩。
                 認養毛孩， 或許不能改變這個世界一丁點，但是卻可以改變這隻毛孩的一生！</p>
               <a href="https://www.facebook.com/homecafe58/">更了解我</a>
