footer - add pics, update scss footer part

--- a/index.html
+++ b/index.html
@@ -881,10 +881,28 @@
     </div>
 
     <div class="related-groups">
-      <h2>相關公益團體</h2>
-    </div>
-    <div class="copyright">
-      <span>© Homecafe. All rights reserved.</span>
+      <h1>相關公益團體</h1>
+      <ul class="related-groups-icons">
+        <li class="icon">
+          <img src="./images/footer/Else-Logo01.png" alt="">
+        </li>
+        <li class="icon">
+          <img src="./images/footer/Else-Logo02.png" alt="">
+        </li>
+        <li class="icon">
+          <img src="./images/footer/Else-Logo03.png" alt="">
+        </li>
+        <li class="icon">
+          <img src="./images/footer/Else-Logo04.png" alt="">
+        </li>
+        <li class="icon">
+          <img src="./images/footer/Else-Logo05.png" alt="">
+        </li>
+      </ul>
+
+      <div class="copyright">
+        <span>© Homecafe. All rights reserved.</span>
+      </div>
     </div>
 
   </footer>
