footer - index.html: add class; scss: RWD

--- a/index.html
+++ b/index.html
@@ -806,19 +806,19 @@
       </div>
       <div class="row">
         <div class="column">
-          <h2>週一</h2>
+          <h2 class="weekdays-title">週一</h2>
           <div class="line-break"></div>
           <h2>休息</h2>
         </div>
 
         <div class="column">
-          <h2>週二</h2>
+          <h2 class="weekdays-title">週二</h2>
           <div class="line-break"></div>
           <h2>休息</h2>
         </div>
 
         <div class="column">
-          <h2>週三</h2>
+          <h2 class="weekdays-title">週三</h2>
           <div class="line-break"></div>
           <h2>12:00 ~ 15:00</h2>
           <div class="line-break"></div>
@@ -826,28 +826,28 @@
         </div>
 
         <div class="column">
-          <h2>週四</h2>
+          <h2 class="weekdays-title">週四</h2>
           <div class="line-break"></div>
           <h2>12:00 ~ 15:00</h2>
           <div class="line-break"></div>
           <h2>17:00 ~ 21:00</h2>
         </div>
         <div class="column">
-          <h2>週五</h2>
+          <h2 class="weekdays-title">週五</h2>
           <div class="line-break"></div>
           <h2>12:00 ~ 15:00</h2>
           <div class="line-break"></div>
           <h2>17:00 ~ 21:00</h2>
         </div>
         <div class="column">
-          <h2>週六</h2>
+          <h2 class="weekdays-title">週六</h2>
           <div class="line-break"></div>
           <h2>12:00 ~ 15:00</h2>
           <div class="line-break"></div>
           <h2>17:00 ~ 21:00</h2>
         </div>
         <div class="column">
-          <h2>週日</h2>
+          <h2 class="weekdays-title">週日</h2>
           <div class="line-break"></div>
           <h2>12:00 ~ 15:00</h2>
           <div class="line-break"></div>
