--- a/index.html
+++ b/index.html
@@ -801,7 +801,8 @@
   <!-- footer開始 -->
   <footer>
     <div class="business-hours">
-      <div class="title">
+      <div class="footer-title">
+        <img src="./images/footer/黃貓掌.png" alt="">
         <h1>營業時間</h1>
       </div>
       <div class="row">
@@ -862,15 +863,24 @@
 
     <div class="contact-details">
       <div class="detail-1">
-        <h1>地址</h1>
+        <div class="footer-title">
+          <img src="./images/footer/黃貓掌.png" alt="">
+          <h1>地址</h1>
+        </div>
         <h2>臺中市北區興進路58號</h2>
       </div>
       <div class="detail-2">
-        <h1>電話</h1>
+        <div class="footer-title">
+          <img src="./images/footer/黃貓掌.png" alt="">
+          <h1>電話</h1>
+        </div>
         <h2>04-2233-7229</h2>
       </div>
       <div class="detail-3">
-        <h1>信箱</h1>
+        <div class="footer-title">
+          <img src="./images/footer/黃貓掌.png" alt="">
+          <h1>信箱</h1>
+        </div>
         <h2>kate0523523@gmail.com</h2>
       </div>
       <div></div>
