--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                   <h3>剝皮辣椒雞湯鍋</h3>
                   <span>$360</span>
                 </div>
-                <p>白飯／冬粉／寬粉／科學麵 （附餐擇一）</p>
+                <p class="words">白飯／冬粉／寬粉／科學麵 （附餐擇一）</p>
               </div>
               <div class="row">
                 <div class="column1">
@@ -487,7 +487,7 @@
                     <h3>日式黃金炸豬排</h3>
                     <p>（蜂蜜芥末／原味番茄醬／和風醬）</p>
                   </div>
-                  <span>$260</span>
+                  <span class="words">$260</span>
                 </div>
               </div>
               <div class="column2">
@@ -588,79 +588,79 @@
             <div class="row">
               <div class="column1">
                 <div class="meal-content">
-                  <h3>可樂</h3>
+                  <h3 class="words">可樂</h3>
                   <span>$90</span>
                 </div>
                 <div class="meal-content">
-                  <h3>紅茶</h3>
+                  <h3 class="words">紅茶</h3>
                   <span>$90</span>
                 </div>
                 <div class="meal-content">
-                  <h3>鮮奶茶</h3>
+                  <h3 class="words">鮮奶茶</h3>
                   <span>$100</span>
                 </div>
                 <div class="meal-content">
-                  <h3>香柚茶</h3>
+                  <h3 class="words">香柚茶</h3>
                   <span>$140</span>
                 </div>
                 <div class="meal-content">
-                  <h3>水果茶</h3>
+                  <h3 class="words">水果茶</h3>
                   <span>$150</span>
                 </div>
                 <div class="meal-content">
-                  <h3>蘋果牛奶</h3>
+                  <h3 class="words">蘋果牛奶</h3>
                   <span>$130</span>
                 </div>
               </div>
               <div class="column2">
                 <div class="meal-content">
-                  <h3>可可牛奶</h3>
+                  <h3 class="words">可可牛奶</h3>
                   <span>$130</span>
                 </div>
                 <div class="meal-content">
-                  <h3>抹茶拿鐵</h3>
+                  <h3 class="words">抹茶拿鐵</h3>
                   <span>$130</span>
                 </div>
                 <div class="meal-content">
-                  <h3>奇異果汁</h3>
+                  <h3 class="words">奇異果汁</h3>
                   <span>$130</span>
                 </div>
                 <div class="meal-content">
-                  <h3>蘋果玫瑰茶</h3>
+                  <h3 class="words">蘋果玫瑰茶</h3>
                   <span>$140</span>
                 </div>
                 <div class="meal-content">
-                  <h3>奇亞籽活力鮮果飲</h3>
+                  <h3 class="words">奇亞籽活力鮮果飲</h3>
                   <span>$140</span>
                 </div>
                 <div class="meal-content">
-                  <h3>膠原CC鮮果飲</h3>
+                  <h3 class="words">膠原CC鮮果飲</h3>
                   <span>$150</span>
                 </div>
               </div>
               <div class="column3">
                 <div class="meal-content">
-                  <h3>季節限定楊梅汁</h3>
+                  <h3 class="words">季節限定楊梅汁</h3>
                   <span>$150</span>
                 </div>
                 <div class="meal-content">
-                  <h3>美式咖啡</h3>
+                  <h3 class="words">美式咖啡</h3>
                   <span>$90</span>
                 </div>
                 <div class="meal-content">
-                  <h3>卡布奇諾</h3>
+                  <h3 class="words">卡布奇諾</h3>
                   <span>$110</span>
                 </div>
                 <div class="meal-content">
-                  <h3>原味拿鐵</h3>
+                  <h3 class="words">原味拿鐵</h3>
                   <span>$120</span>
                 </div>
                 <div class="meal-content">
-                  <h3>香草拿鐵</h3>
+                  <h3 class="words">香草拿鐵</h3>
                   <span>$130</span>
                 </div>
                 <div class="meal-content">
-                  <h3>焦糖拿鐵</h3>
+                  <h3 class="words">焦糖拿鐵</h3>
                   <span>$130</span>
                 </div>
               </div>
@@ -742,7 +742,6 @@
             🐾帶貓狗回家一起過一輩子😎</p>
           <p class="from-us-2" data-aos="fade-left" data-aos-delay="2000">我們並不會禁止情侶或是學生領養喔，但是學生的話會需要您先
             跟家長溝通，家長同意後也會讓您挑選心愛的毛孩帶回家喔！</p>
-
         </div>
         <div class="logo-pic"></div>
     </section> <!-- 寵物認養區塊結束-->
