footer 小改，已合併 git 上最新版

--- a/index.html
+++ b/index.html
@@ -861,21 +861,21 @@
     </div>
 
     <div class="contact-details">
-      <div class="detail-1">
+      <div class="contact-detail detail-1">
         <div class="footer-title">
           <img src="./images/footer/黃貓掌.png" alt="">
           <h1>地址</h1>
         </div>
         <h2>臺中市北區興進路58號</h2>
       </div>
-      <div class="detail-2">
+      <div class="contact-detail detail-2">
         <div class="footer-title">
           <img src="./images/footer/黃貓掌.png" alt="">
           <h1>電話</h1>
         </div>
         <h2>04-2233-7229</h2>
       </div>
-      <div class="detail-3">
+      <div class="contact-detail detail-3">
         <div class="footer-title">
           <img src="./images/footer/黃貓掌.png" alt="">
           <h1>信箱</h1>
